--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     </header>
 
     <section class="portfolio">
+        <div class="portfolio-top">
         <h2>PORTFOLIO</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <div class="filter-buttons">
@@ -38,6 +39,7 @@
             <button>People</button>
             <button>Still Life</button>
             <button>Street</button>
+        </div>
         </div>
         <div class="gallery">
             <div class="grid">
